[tool.poetry]
name = "quart_demo"
version = "0.0.1"
description = ""
authors = ["klejdis jorgji <jorgji.klejdis@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.9, < 4"
quart = "^0.18.0"
hypercorn = "^0.14.3"
httpx = "^0.23.0"
typed-settings = "1.1.0"
quart-schema = "^0.14.3"
types-setuptools = "^65.6.0.2"
alembic = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
black = "^22.1.0"
flake8 = "^6.0.0"
flake8-print = "^5.0.0"
pytest-integration = "^0.2.2"
pytest-custom-exit-code = "^0.3.0"
pytest-mock = "^3.7.0"
mypy = "^0.991"
isort = "^5.10.1"
coverage = "^6.5.0"

[tool.black]
line-length = 120

[tool.mypy]
strict = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mypy-opentelemetry.sdk.*"
implicit_reexport = true

[tool.isort]
py_version=310
line_length=120
profile="black"
